--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Avalie suas sessões com a Dra. Ana Maria, psicóloga especializada. Suas avaliações ajudam a melhorar a qualidade do atendimento e promover seu bem-estar emocional."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
